@@ -1,5 +1,8 @@
 2006-07-30  Martin Mares  <mj@ucw.cz>
 
+	* lib/i386-ports.c, lib/i386-io-*: Moved the logic which keeps track of
+	the port access state to generic code.
+
 	* lib/i386-io-hurd.h: Ask the kernel for I/O port access appropriately.
 	Contributed by Thomas Schwinge and Samuel Thibault.
 
